[gd_scene load_steps=11 format=2]

[ext_resource path="res://screens/character_selection_screen/Species.gd" type="Script" id=1]
[ext_resource path="res://screens/main_screen/interface/left.png" type="Texture" id=2]
[ext_resource path="res://screens/main_screen/interface/left_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/character_mantiacs_1.png" type="Texture" id=4]
[ext_resource path="res://screens/main_screen/interface/right.png" type="Texture" id=5]
[ext_resource path="res://screens/main_screen/interface/right_pressed.png" type="Texture" id=6]
[ext_resource path="res://ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=7]
[ext_resource path="res://actors/mantiacs_ship.png" type="Texture" id=8]
[ext_resource path="res://ui/interface/stats/Attack.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]

resource_name = "standby"
length = 10.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Species" type="CenterContainer" groups=[
"choice",
]]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_top = -360.0
margin_right = 288.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
script = ExtResource( 1 )
_sections_unfolded = [ "Material" ]
left = "A"
right = "D"
fire = "1"
species = "MANTIACS"
side = 1

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 288.0
margin_bottom = 692.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="MarginContainer" type="CenterContainer" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 288.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 288.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Previous" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 75.0
margin_bottom = 400.0
rect_min_size = Vector2( 75, 75 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect", "Textures" ]

[node name="CharacterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 79.0
margin_right = 209.0
margin_bottom = 400.0
rect_min_size = Vector2( 130, 400 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Focus", "Grow Direction", "Material", "Rect" ]

[node name="Sprite" type="Sprite" parent="VBoxContainer/MarginContainer/HBoxContainer/CharacterContainer" index="0"]

position = Vector2( 65, 200 )
scale = Vector2( 0.43, 0.43 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]

[node name="Next" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 213.0
margin_right = 288.0
margin_bottom = 400.0
rect_min_size = Vector2( 75, 75 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect", "Textures" ]

[node name="SpeciesName" type="Label" parent="VBoxContainer" index="1"]

modulate = Color( 1, 0.576471, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 404.0
margin_right = 288.0
margin_bottom = 444.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "species"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 448.0
margin_right = 288.0
margin_bottom = 548.0
rect_min_size = Vector2( 100, 50 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Rect" ]

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 94.0
margin_right = 194.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Sprite" type="Sprite" parent="VBoxContainer/CenterContainer/NinePatchRect" index="0"]

position = Vector2( 50, 50 )
rotation = 4.46638e-06
scale = Vector2( 0.5, 0.500019 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Z Index" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/CenterContainer/NinePatchRect/Sprite" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/standby = SubResource( 1 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Controls" parent="VBoxContainer" index="3" instance=ExtResource( 9 )]

margin_top = 552.0
margin_right = 288.0
margin_bottom = 664.0

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Previous" to="." method="_on_Previous_pressed"]

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Next" to="." method="_on_Next_pressed"]


